fixed scrollbar issues and updated resources folder

--- a/admin/admin.css
+++ b/admin/admin.css
@@ -1,19 +1,3 @@
-::-webkit-scrollbar {
-  background-color: var(--body-bg-color);
-}
-
-::-webkit-scrollbar-button {
-  background: var(--yellow);
-}
-
-::-webkit-scrollbar-track {
-  background-color: var(--body-bg-color);
-}
-
-::-webkit-scrollbar-thumb {
-  background-color: var(--yellow);
-}
-
 body {
   position: relative;
   color: #fff;
