--- a/home/home.css
+++ b/home/home.css
@@ -1,24 +1,3 @@
-:root {
-  scrollbar-color: var(--yellow) var(--body-bg-color);
-  scrollbar-width: auto;
-}
-
-::-webkit-scrollbar {
-  background-color: var(--body-bg-color);
-}
-
-::-webkit-scrollbar-button {
-  background: var(--yellow);
-}
-
-::-webkit-scrollbar-track {
-  background-color: var(--body-bg-color);
-}
-
-::-webkit-scrollbar-thumb {
-  background-color: var(--yellow);
-}
-
 body {
   position: relative;
   color: #fff;
